add model event

--- a/artchers/templates/vote.html
+++ b/artchers/templates/vote.html
@@ -218,9 +218,9 @@
                         {%render_field form.vote.label%}
                         {%render_field form.vote class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-secondary focus:border-secondary block w-full p-2.5"%}
                         </div>
-                    <button type="submit" value="Submit" class="bg-green-500 hover:bg-green-700 transition duration-500 text-white font-bold py-2 px-4 rounded mt-4">Envoyer</button>
+                    <button type="submit" value="Submit" class="bg-secondary hover:bg-white hover:text-secondary border-2 border-secondary transition duration-500 text-white font-bold py-2 px-4 rounded mt-4">Envoyer</button>
                     </form>
-                    <button id="closeModal" class="bg-blue-500 hover:bg-blue-700 transition duration-500 text-white font-bold py-2 px-4 rounded mt-4">Annuler</button>
+                    <button id="closeModal" class="bg-tertiary hover:bg-white hover:text-tertiary border-2 border-tertiary transition duration-500 text-white font-bold py-2 px-4 rounded mt-4">Annuler</button>
                 </div> 
             </div>
         </div>
