add some changes on event page

--- a/artchers/templates/event.html
+++ b/artchers/templates/event.html
@@ -125,7 +125,7 @@
             <p class="text-lg pb-5 font-montserrat">{{dist.description}}</p>
         </div>
         <div class="order-1 xl:order-2">
-            <div><img src="{{MEDIA_URL}}{{dist.image}}" alt="blog image" class="rounded-lg h-64 w-full max-h-64 object-fill max-w-screen-lgz pb-10 xl:pb-0"></div>
+            <div><img src="{{MEDIA_URL}}{{dist.image}}" alt="blog image" class="rounded-lg h-32 w-full max-h-32 object-fill max-w-96 pb-10 xl:pb-0"></div>
         </div>
         {%endif%}
 
@@ -139,7 +139,7 @@
             <p class="text-lg pb-5 font-montserrat">{{dist.description}}</p>
         </div>
         <div class="order-1 xl:order-1">
-            <div><img src="{{MEDIA_URL}}{{dist.image}}" alt="blog image" class="rounded-lg h-64 w-full max-h-64 object-fill max-w-screen-lg pb-10 xl:pb-0"></div>
+            <div><img src="{{MEDIA_URL}}{{dist.image}}" alt="blog image" class="rounded-lg h-32 w-full max-h-32 object-fill max-w-96 pb-10"></div>
         </div>
         {%endif%}
     </div>
