--- a/artchers/templates/index.html
+++ b/artchers/templates/index.html
@@ -157,36 +157,38 @@
        </svg>
             <p class="text-4xl font-bold" >Voter dès maintenant</p>
         </a>
+        {%for r in result%}
         <div class=" grow border rounded-2xl border-white border-2 px-5 xl:px-20 text-center py-3 place-items-center bg-index-30">
             <p class="text-3xl xl:text-4xl">Etat des votes :</p>
             <div class="grid grid-rows-6 xl:grid-cols-6 xl:grid-rows-1 place-items-center text-center pt-10">
                 <div>
                     <p class="text-4xl font-bold text-tertiary">District 1</p>
-                    <p class="text-3xl">20%</p>
+                    <p class="text-3xl">{{r.district1}}%</p>
                 </div>
                 <div>
                     <p class="text-4xl font-bold text-tertiary">District 2</p>
-                    <p class="text-3xl">20%</p>
+                    <p class="text-3xl">{{r.district2}}%</p>
                 </div>
                 <div> 
                     <p class="text-4xl font-bold text-tertiary">District 3</p>
-                    <p class="text-3xl">20%</p>
+                    <p class="text-3xl">{{r.district3}}%</p>
                 </div>
                 <div> 
                     <p class="text-4xl font-bold text-tertiary">District 4</p>
-                    <p class="text-3xl">20%</p>
+                    <p class="text-3xl">{{r.district4}}%</p>
                 </div>
                 <div> 
                     <p class="text-4xl font-bold text-tertiary">District 5</p>
-                    <p class="text-3xl">20%</p>
+                    <p class="text-3xl">{{r.district5}}%</p>
                 </div>
                 <div> 
                     <p class="text-4xl font-bold text-tertiary">District 6</p>
-                    <p class="text-3xl">20%</p>
+                    <p class="text-3xl">{{r.district6}}%</p>
                 </div>
             </div>
         </div>
         </div>
+        {%endfor%}
 
         <div class="grid grid-rows-1 justify-items-center hidden xl:block">
             <img src="{%static 'imgs/sponsors/bandereau2.png'%}" alt="Nos sponsors" >
