--- a/artchers/templates/cgi.html
+++ b/artchers/templates/cgi.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="inline-flex gap-5 text-xl">
-                        <div>Trombinoscope</div>
+                        <a href="trombinoscope" class="hover:text-tertiary transition duration-500">Trombinoscope</a>
                         <a href="https://docs.google.com/spreadsheets/d/1gzjD6VHaOtdFYkG4FYd8MuGXAKHePoOpaervGEuTMKE/edit?usp=sharing" class="hover:text-tertiary transition duration-500"><div>Défis</div></a>
                         <a href="game" class="hover:text-tertiary transition duration-500">Jeu</a>
                     </div>
@@ -71,6 +71,7 @@
         </div>
     </header>
 
+
     <header class="font-bebas h-40 pt-5 pb-10 block xl:hidden">
         <div class="grid grid-rows-1 place-items-center">
            <div class="grow"><a href="./"><img src="{%static 'imgs/main/artchers_texte.png'%}" alt="Artchers" class="max-w-36"></a> </div>
@@ -78,14 +79,16 @@
         <div class="flex flex-col place-items-center">
             <div class="grow mx-10 px-5 pb-2">
                 <div class="inline-flex gap-5 text-xl">
-                    <div>Liste</div>
+                    <a href="trombinoscope" class="hover:text-tertiary transition duration-500">Liste</a>
                     <a href="https://docs.google.com/spreadsheets/d/1keF1zHBt5TpYmDxTWCPGiVzx4UAdZdJRaW_cQcd41_A/edit?usp=sharing" class="hover:text-tertiary transition duration-500"><div>Défis</div></a>
                     <a href="game" class="hover:text-tertiary transition duration-500">Jeu</a>
+                    <a href="event" class="hover:text-tertiary transition duration-500">Event</a>
+
                 </div>
             </div>
             <div class="grow border mx-10 px-5">
                 <div class="inline-flex text-xl align-center gap-5">
-                <a href="COUCOU" class="hover:text-tertiary">
+                <a href="https://www.facebook.com/profile.php?id=61556681844629" class="hover:text-tertiary">
                     <svg fill="#000000" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
                     viewBox="0 0 310 310" xml:space="preserve" class="w-6 h-6 hover:fill-tertiary transition duration-500" >
                     <g id="XMLID_834_">
@@ -97,7 +100,7 @@
                     </g>    
                     </svg>
                 </a>
-                <a href="COUCOU">
+                <a href="https://www.instagram.com/briqueduwea/">
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="w-6 h-6 hover:stroke-tertiary transition duration-500">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z" fill="#0F0F0F"/>
                     <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z" fill="#0F0F0F"/>
@@ -109,6 +112,7 @@
             </div>
         </div>
     </header>
+
 
 
     <div class="flex flex-col place-items-center">
