change trombi picture

--- a/artchers/templates/trombi.html
+++ b/artchers/templates/trombi.html
@@ -114,11 +114,11 @@
     </header>
 
 
-    <p class="text-center text-4xl text-secondary py-10">Trombinoscope de la liste Artchers</p>
+    <p class="text-center text-5xl text-secondary py-10">Trombinoscope de la liste Art'chers</p>
     <p class="text-center text-3xl text-tertiary pt-10 pb-5 font-bold">Le Petit Bureau</p>
     <div class="grid grid-cols-2 md:grid-cols-3 gap-4 pb-10 px-10">
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Alexandre.jpg'%}" alt="" id="info1">
+            <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Alexandre.png'%}" alt="" id="info1">
             <div id="infoListeux1" class="px-5 py-5 hidden">
                 <p class="text-xl"><span class="text-tertiary">Alexandre Martel</span> - <span class="text-secondary">Président</span></p>
                 <p class="pt-3">Plus stressé que les 23 autres personnes de sa liste réunies, Alex est pourtant le gars qu’on retrouve partout, genre vraiment partout, même parfois  en licence de droit. Eh oui, Centrale serait trop facile pour lui. Vivre dans le monde des bisounours restera à jamais son utopie, même s’il vit sur un petit nuage depuis son dernier voyage aux catacombes de Paris. Le sommeil est une option pour notre Prez qui garde dans son frigo un tresor de Rockstars dont le stock diminue a vue d oeil. N’ayant pas pu être le chef des Totalill’taires, il a décidé de se lancer dans la direction du Capitole sous le nom de Président Snow. Teinture naturelle brune ou blanche ? Il paraît même que cette dernière lui va à merveille, même si ce rôle implique de tourner à côté de cadavres…
@@ -126,10 +126,10 @@
             </div>
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Flavie.jpg'%}" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Flavie.png'%}" alt="">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Sarah.jpg'%}" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Sarah.png'%}" alt="">
         </div>
     </div>
 
@@ -137,22 +137,22 @@
 
     <div class="grid grid-cols-2 md:grid-cols-3 gap-4 pb-10 px-10">
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Oxana.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Oxana.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_William.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_William.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Ambre.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Ambre.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Robin.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Robin.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Basile.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Basile.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Thomas.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Thomas.png'%}" alt="">
     </div>
     </div>
 
@@ -160,22 +160,22 @@
 
     <div class="grid grid-cols-2 md:grid-cols-3 gap-4 pb-10 px-10">
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Catherine.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Catherine.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Yasmine.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Yasmin.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Coralie.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Yoann.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Natalia.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Natalia.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Esteban.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Esteban.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Mathis.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Mathis.png'%}" alt="">
     </div>
     </div>
 
@@ -183,13 +183,13 @@
 
     <div class="grid grid-cols-2 md:grid-cols-3 gap-4 pb-10 px-10">
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Adriana.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Adriana.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Augustin.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Augustin.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Axel.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Axel.png'%}" alt="">
     </div>
     </div>
 
@@ -197,22 +197,22 @@
 
     <div class="grid grid-cols-2 md:grid-cols-3 gap-4 pb-10 px-10">
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Timeo.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Timeo.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Pierre.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Pierre.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Yoann.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Yoann.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Felipe.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Felipe.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Maxime.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Maxime.png'%}" alt="">
     </div>
     <div>
-        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/trombi/PP_Gustave.jpg'%}" alt="">
+        <img class="h-auto max-w-full rounded-lg" src="{%static 'imgs/holo/PH_Gustave.png'%}" alt="">
     </div>
     </div>
 
