--- a/artchers/templates/game.html
+++ b/artchers/templates/game.html
@@ -65,7 +65,7 @@
                     <div class="inline-flex">
                     <img src="{%static 'imgs/main/fleche_noir.png'%}" alt="fleche" class="rotate-180 max-w-36">
                     <a href="./"><img src="{%static 'imgs/main/artchers_texte.png'%}" alt="Artchers" class="max-w-36"></a>
-                    <img src="{%static 'imgs/main/fleche_noir.png'%}" alt="fleche" class="max-w-36">
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="{%static 'imgs/main/fleche_noir.png'%}" alt="fleche" class="max-w-36"></a>
                     </div>
                 </div>
                 <div class="inline-flex gap-5 text-xl">
