--- a/artchers/templates/badLink.html
+++ b/artchers/templates/badLink.html
@@ -47,7 +47,7 @@
                             </g>    
                             </svg>
                         </a>
-                        <a href="https://www.instagram.com/briqueduwea/">
+                        <a href="https://www.instagram.com/artchersbda/">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="w-6 h-6 hover:stroke-tertiary transition duration-500">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z" fill="#0F0F0F"/>
                             <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z" fill="#0F0F0F"/>
@@ -83,7 +83,7 @@
             <div class="grow mx-10 px-5 pb-2">
                 <div class="inline-flex gap-5 text-xl">
                     <a href="trombinoscope" class="hover:text-tertiary transition duration-500">Liste</a>
-                    <a href="https://docs.google.com/spreadsheets/d/1keF1zHBt5TpYmDxTWCPGiVzx4UAdZdJRaW_cQcd41_A/edit?usp=sharing" class="hover:text-tertiary transition duration-500"><div>Défis</div></a>
+                    <a href="https://docs.google.com/spreadsheets/d/1gzjD6VHaOtdFYkG4FYd8MuGXAKHePoOpaervGEuTMKE/edit?usp=sharing" class="hover:text-tertiary transition duration-500"><div>Défis</div></a>
                     <a href="game" class="hover:text-tertiary transition duration-500">Jeu</a>
                     <a href="event" class="hover:text-tertiary transition duration-500">Event</a>
 
@@ -103,7 +103,7 @@
                     </g>    
                     </svg>
                 </a>
-                <a href="https://www.instagram.com/briqueduwea/">
+                <a href="https://www.instagram.com/artchersbda/">
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="w-6 h-6 hover:stroke-tertiary transition duration-500">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z" fill="#0F0F0F"/>
                     <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z" fill="#0F0F0F"/>
